[package]
name = "ykoath-protocol"
version = "0.1.0"
edition = "2021"
description = "Implementaion of YKOATH Protocol"
license = "MIT"
repository = "https://github.com/Hakuyume/ykoath-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcsc = "2"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
tracing-subscriber = "0.3"
